--- a/app/templates/intro/index.html
+++ b/app/templates/intro/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="min-h-screen w-screen flex justify-center items-center bg-gradient-to-b from-white to-[#FFF9F0]">
     <div class="md:hidden flex flex-col items-center w-full">
-      <img src="{{ url_for('static', path='assets/intro-m.png') }}" alt="Mobile Intro" class="w-full">
+      <img src="{{ url_for('static', path='assets/intro-no-mao-m.png') }}" alt="Mobile Intro" class="w-full">
 
       <div class="bg-[#FFF9F0] w-full flex flex-col justify-center items-center py-4 space-y-10 ">
           <img src="{{ url_for('static', path='assets/intro-m-text-1.png') }}" alt="虎爺祈福雞腿正式開賣" class="w-11/12 ">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="hidden md:flex flex-col items-center w-full">
-      <img src="{{ url_for('static', path='assets/intro-pc.png') }}" alt="Desktop Intro" class="w-full  rounded-2xl shadow-lg">
+      <img src="{{ url_for('static', path='assets/intro-no-mao-pc.png') }}" alt="Desktop Intro" class="w-full  rounded-2xl shadow-lg">
 
       <div class="bg-[#FFF9F0] w-full flex flex-col justify-center items-center py-16 px-12 space-y-8 rounded-xl shadow">
           <img src="{{ url_for('static', path='assets/intro-pc-text-1.png') }}" alt="虎爺祈福雞腿正式開賣" class="w-10/12 ">
